# dev_bestia_url_utf8

./: Cargo.toml  README.md  cache22.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/dev_bestia_url_utf8/: all.html  enum.UrlUtf8Error.html  index.html  macro.url_u.html  sidebar-items.js  struct.UrlPartUtf8Decoded.html  struct.UrlUtf8EncodedString.html
docs/dev_bestia_url_utf8/url_utf8_mod/: constant.FRAGMENT.html  index.html  sidebar-items.js  struct.UrlPartUtf8Decoded.html  struct.UrlUtf8EncodedString.html
docs/implementors/alloc/string/: trait.ToString.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/str/traits/: trait.FromStr.js
docs/implementors/std/error/: trait.Error.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/dev_bestia_url_utf8/: lib.rs.html  url_utf8_mod.rs.html
src/: lib.rs  url_utf8_mod.rs
tmp/: temp22.txt
