[package]
name = "dev_bestia_url_utf8"
version = "0.1.28"
description = "Library for url utf8 encode/decode"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dev_bestia_url_utf8"
categories = ["rust-patterns"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["string"]
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
dev_bestia_string_utils = "0.1.19"

log = "0.4.6"
unwrap="1.2.1"
percent-encoding = "2.1.0"
thiserror = "1.0.30"